--- a/src/components/spread-product/SpreadProduct.scss
+++ b/src/components/spread-product/SpreadProduct.scss
@@ -15,6 +15,7 @@
   &__image-box {
     position: relative;
     height: 160px;
+    cursor: pointer;
     img {
       width: 100%;
       height: 100%;
@@ -38,6 +39,7 @@
     transform: translate(50px);
     transition: all 0.5s ease;
     color: red;
+    z-index: 9999;
   }
   &__info-box {
     padding: 24px 24px 46px;
